--- a/systemd/s3-backup.service
+++ b/systemd/s3-backup.service
@@ -5,6 +5,8 @@ Description=s3-backup
 Type=oneshot
 ExecStart=/home/s3-backup/backup.sh
 WorkingDirectory=/home/s3-backup
+User=s3-backup
+Group=s3-backup
 
 [Install]
 WantedBy=multi-user.target
